(lang dune 3.14)

(name DuneBoy)

(generate_opam_files true)

(source
 (github seaskythe/DuneBoy))

(authors "SeaSkyThe")

(maintainers "SeaSkyThe")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name DuneBoy)
 (synopsis "An OCaml GameBoy Emulator")
 (description "Im doing this project so I can learn more about the depths of OCaml.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
